@@ -201,7 +201,7 @@ public class ReplaceIndexer implements IndexingFilter {
                   continue;
                 }
               }
-              Integer iFlags = (flags > 0) ? new Integer(flags) : null;
+              Integer iFlags = (flags > 0) ? Integer.valueOf(flags) : null;
 
               // Make a FieldReplacer out of these params.
               FieldReplacer fr = new FieldReplacer(fieldName, toFieldName,
